[tool.poetry]
name = "async-script-hash"
version = "0.1.0"
description = ""
authors = ["A-V-tor <avtorca4@gmail.com>"]
readme = "README.md"
packages = [{include = "async_script_hash"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
requests = "^2.28.2"
aiofiles = "^23.1.0"
pytest = "^7.2.2"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
wemake-python-styleguide = "^0.17.0"
isort = "^5.12.0"
flake8-per-file-ignores = "0.7.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
